--- a/src/main/resources/templates/events-list.html
+++ b/src/main/resources/templates/events-list.html
@@ -1,43 +1,30 @@
-
-<html lang="en"
-      xmlns:th="http://thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorate="~{layout}">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>One Page Wonder - Start Bootstrap Template</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-</head>
-<body id="page-top">
-<!-- Header-->
-<header layout:fragment="body" class="masthead text-center text-white">
-    <div class="masthead-content">
-        <div class="container px-5">
-            <h1 class="masthead-heading mb-0">One Page Wonder</h1>
-            <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
-            <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
+layout:decorate="~{layout}">
+<body class="d-flex flex-column h-100">
+<main class="flex-shrink-0">
+    <!-- Page Content-->
+    <section layout:fragment="body" class="py-5">
+        <div class="container px-5 my-5">
+            <div class="text-center mb-5">
+                <h1 class="fw-bolder">ALL Events</h1>
+                <p class="lead fw-normal text-muted mb-0">Company portfolio</p>
+            </div>
+            <div class="row gx-5">
+                <div th:each = "event :${events}" class="col-lg-6 mb-2">
+                    <div  class="position-relative mb-3" >
+                        <img class="img-fluid rounded-3 mb-3" th:href="@{/events/{eventId}(eventId=${event.id})}" th:src="${event.eventImage}" alt="..." />
+                        <a th:text="${event.eventName}" class="fs-3 fw-bolder text-decoration-none link-dark stretched-link" th:href="@{/events/{eventId}(eventId=${event.id})}"></a>
+                    </div>
+                    <a class="btn btn-link link-dark" th:href="@{/events/{eventId}/edit(eventId=${event.id})}">Edit</a>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="bg-circle-1 bg-circle"></div>
-    <div class="bg-circle-2 bg-circle"></div>
-    <div class="bg-circle-3 bg-circle"></div>
-    <div class="bg-circle-4 bg-circle"></div>
-</header>
-<!-- Content section 1-->
+    </section>
 
-
-
-<!-- Footer-->
+</main>
 
 </body>
 </html>
+```
+
