--- a/src/main/resources/templates/events-list.html
+++ b/src/main/resources/templates/events-list.html
@@ -11,6 +11,11 @@ layout:decorate="~{layout}">
                 <p class="lead fw-normal text-muted mb-0">Company portfolio</p>
             </div>
             <div class="row gx-5">
+                <div>
+                    <form th:action="@{/events/search}" class="form-inline my-2 my-lg-0 mb-3">
+                        <input name="query" class="form-control mr-sm-2 mb-5" type="search" placeholder="Search events" aria-label="Search">
+                    </form>
+                </div>
                 <div th:each = "event :${events}" class="col-lg-6 mb-2">
                     <div  class="position-relative mb-3" >
                         <img class="img-fluid rounded-3 mb-3" th:href="@{/events/{eventId}(eventId=${event.id})}" th:src="${event.eventImage}" alt="..." />
