--- a/src/main/resources/templates/events-list.html
+++ b/src/main/resources/templates/events-list.html
@@ -6,9 +6,12 @@ layout:decorate="~{layout}">
     <!-- Page Content-->
     <section layout:fragment="body" class="py-5">
         <div class="container px-5 my-5">
+            <div th:if="${param.success}" class="alert alert-success">
+                You have been registered successfully!
+            </div>
             <div class="text-center mb-5">
                 <h1 class="fw-bolder">ALL Events</h1>
-                <p class="lead fw-normal text-muted mb-0">Company portfolio</p>
+                <p class="lead fw-normal text-muted mb-0">Chose the best event for you!</p>
             </div>
             <div class="row gx-5">
                 <div>
