--- a/src/main/resources/templates/events-create.html
+++ b/src/main/resources/templates/events-create.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="col-md-6">
-          <label for="eventDateTime" class="form-label">Date Time</label>
+          <label for="eventDateTime">Date Time</label>
           <input type="datetime-local"
                  class="form-control"
                  id="eventDateTime"
@@ -43,7 +43,7 @@
         </div>
 
         <div class="col-md-6">
-          <label for="bookingDeadline" class="form-label">Deadline</label>
+          <label for="bookingDeadline" >Deadline</label>
           <input type="datetime-local"
                  class="form-control"
                  id="bookingDeadline"
